; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/extr_imm4.c_decode_block.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/extr_imm4.c_decode_block.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32, i32 }
%struct.TYPE_8__ = type { %struct.TYPE_7__* }
%struct.TYPE_7__ = type { i32**, i32, %struct.TYPE_6__ }
%struct.TYPE_6__ = type { i64* }

@block_tab = common dso_local global %struct.TYPE_9__ zeroinitializer, align 4
@AVERROR_INVALIDDATA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_8__*, i32*, i32, i32, i32, i32, i32)* @decode_block to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @decode_block(%struct.TYPE_8__* %0, i32* %1, i32 %2, i32 %3, i32 %4, i32 %5, i32 %6) #0 {
  %8 = alloca i32, align 4
  %9 = alloca %struct.TYPE_8__*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca %struct.TYPE_7__*, align 8
  %17 = alloca i64*, align 8
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  store %struct.TYPE_8__* %0, %struct.TYPE_8__** %9, align 8
  store i32* %1, i32** %10, align 8
  store i32 %2, i32* %11, align 4
  store i32 %3, i32* %12, align 4
  store i32 %4, i32* %13, align 4
  store i32 %5, i32* %14, align 4
  store i32 %6, i32* %15, align 4
  %23 = load %struct.TYPE_8__*, %struct.TYPE_8__** %9, align 8
  %24 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %23, i32 0, i32 0
  %25 = load %struct.TYPE_7__*, %struct.TYPE_7__** %24, align 8
  store %struct.TYPE_7__* %25, %struct.TYPE_7__** %16, align 8
  %26 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %27 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %26, i32 0, i32 2
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i32 0, i32 0
  %29 = load i64*, i64** %28, align 8
  store i64* %29, i64** %17, align 8
  %30 = load i32, i32* %13, align 4
  %31 = icmp ne i32 %30, 0
  %32 = xor i1 %31, true
  %33 = zext i1 %32 to i32
  store i32 %33, i32* %18, align 4
  br label %34

34:                                               ; preds = %107, %7
  %35 = load i32, i32* %18, align 4
  %36 = icmp slt i32 %35, 64
  br i1 %36, label %37, label %110

37:                                               ; preds = %34
  %38 = load i32*, i32** %10, align 8
  %39 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @block_tab, i32 0, i32 1), align 4
  %40 = load i32, i32* getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @block_tab, i32 0, i32 0), align 4
  %41 = call i32 @get_vlc2(i32* %38, i32 %39, i32 %40, i32 1)
  store i32 %41, i32* %22, align 4
  %42 = load i32, i32* %22, align 4
  %43 = icmp slt i32 %42, 0
  br i1 %43, label %44, label %46

44:                                               ; preds = %37
  %45 = load i32, i32* @AVERROR_INVALIDDATA, align 4
  store i32 %45, i32* %8, align 4
  br label %179

46:                                               ; preds = %37
  %47 = load i32, i32* %22, align 4
  %48 = icmp eq i32 %47, 0
  br i1 %48, label %49, label %56

49:                                               ; preds = %46
  %50 = load i32*, i32** %10, align 8
  %51 = call i32 @get_bits1(i32* %50)
  store i32 %51, i32* %19, align 4
  %52 = load i32*, i32** %10, align 8
  %53 = call i32 @get_bits(i32* %52, i32 6)
  store i32 %53, i32* %20, align 4
  %54 = load i32*, i32** %10, align 8
  %55 = call i32 @get_sbits(i32* %54, i32 8)
  store i32 %55, i32* %21, align 4
  br label %72

56:                                               ; preds = %46
  %57 = load i32, i32* %22, align 4
  %58 = and i32 %57, 127
  store i32 %58, i32* %21, align 4
  %59 = load i32, i32* %22, align 4
  %60 = ashr i32 %59, 14
  %61 = and i32 %60, 1
  store i32 %61, i32* %19, align 4
  %62 = load i32, i32* %22, align 4
  %63 = ashr i32 %62, 7
  %64 = and i32 %63, 63
  store i32 %64, i32* %20, align 4
  %65 = load i32*, i32** %10, align 8
  %66 = call i32 @get_bits1(i32* %65)
  %67 = icmp ne i32 %66, 0
  br i1 %67, label %68, label %71

68:                                               ; preds = %56
  %69 = load i32, i32* %21, align 4
  %70 = sub nsw i32 0, %69
  store i32 %70, i32* %21, align 4
  br label %71

71:                                               ; preds = %68, %56
  br label %72

72:                                               ; preds = %71, %49
  %73 = load i32, i32* %20, align 4
  %74 = load i32, i32* %18, align 4
  %75 = add nsw i32 %74, %73
  store i32 %75, i32* %18, align 4
  %76 = load i32, i32* %18, align 4
  %77 = icmp sge i32 %76, 64
  br i1 %77, label %78, label %79

78:                                               ; preds = %72
  br label %110

79:                                               ; preds = %72
  %80 = load i32, i32* %14, align 4
  %81 = load i32, i32* %21, align 4
  %82 = icmp slt i32 %81, 0
  %83 = zext i1 %82 to i64
  %84 = select i1 %82, i32 -1, i32 1
  %85 = mul nsw i32 %80, %84
  %86 = load i32, i32* %12, align 4
  %87 = load i32, i32* %21, align 4
  %88 = mul nsw i32 %86, %87
  %89 = add nsw i32 %85, %88
  %90 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %91 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %90, i32 0, i32 0
  %92 = load i32**, i32*** %91, align 8
  %93 = load i32, i32* %11, align 4
  %94 = sext i32 %93 to i64
  %95 = getelementptr inbounds i32*, i32** %92, i64 %94
  %96 = load i32*, i32** %95, align 8
  %97 = load i64*, i64** %17, align 8
  %98 = load i32, i32* %18, align 4
  %99 = sext i32 %98 to i64
  %100 = getelementptr inbounds i64, i64* %97, i64 %99
  %101 = load i64, i64* %100, align 8
  %102 = getelementptr inbounds i32, i32* %96, i64 %101
  store i32 %89, i32* %102, align 4
  %103 = load i32, i32* %19, align 4
  %104 = icmp ne i32 %103, 0
  br i1 %104, label %105, label %106

105:                                              ; preds = %79
  br label %110

106:                                              ; preds = %79
  br label %107

107:                                              ; preds = %106
  %108 = load i32, i32* %18, align 4
  %109 = add nsw i32 %108, 1
  store i32 %109, i32* %18, align 4
  br label %34

110:                                              ; preds = %105, %78, %34
  %111 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %112 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %111, i32 0, i32 1
  %113 = load i32, i32* %112, align 8
  %114 = icmp eq i32 %113, 2
  br i1 %114, label %115, label %178

115:                                              ; preds = %110
  %116 = load i32, i32* %15, align 4
  %117 = icmp ne i32 %116, 0
  br i1 %117, label %118, label %178

118:                                              ; preds = %115
  %119 = load i32, i32* %11, align 4
  %120 = icmp slt i32 %119, 4
  br i1 %120, label %121, label %178

121:                                              ; preds = %118
  %122 = load i32, i32* %13, align 4
  %123 = icmp ne i32 %122, 0
  br i1 %123, label %124, label %138

124:                                              ; preds = %121
  %125 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %126 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %125, i32 0, i32 0
  %127 = load i32**, i32*** %126, align 8
  %128 = load i32, i32* %11, align 4
  %129 = sext i32 %128 to i64
  %130 = getelementptr inbounds i32*, i32** %127, i64 %129
  %131 = load i32*, i32** %130, align 8
  %132 = load i64*, i64** %17, align 8
  %133 = getelementptr inbounds i64, i64* %132, i64 0
  %134 = load i64, i64* %133, align 8
  %135 = getelementptr inbounds i32, i32* %131, i64 %134
  %136 = load i32, i32* %135, align 4
  %137 = mul nsw i32 %136, 2
  store i32 %137, i32* %135, align 4
  br label %138

138:                                              ; preds = %124, %121
  %139 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %140 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %139, i32 0, i32 0
  %141 = load i32**, i32*** %140, align 8
  %142 = load i32, i32* %11, align 4
  %143 = sext i32 %142 to i64
  %144 = getelementptr inbounds i32*, i32** %141, i64 %143
  %145 = load i32*, i32** %144, align 8
  %146 = load i64*, i64** %17, align 8
  %147 = getelementptr inbounds i64, i64* %146, i64 1
  %148 = load i64, i64* %147, align 8
  %149 = getelementptr inbounds i32, i32* %145, i64 %148
  %150 = load i32, i32* %149, align 4
  %151 = mul nsw i32 %150, 2
  store i32 %151, i32* %149, align 4
  %152 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %153 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %152, i32 0, i32 0
  %154 = load i32**, i32*** %153, align 8
  %155 = load i32, i32* %11, align 4
  %156 = sext i32 %155 to i64
  %157 = getelementptr inbounds i32*, i32** %154, i64 %156
  %158 = load i32*, i32** %157, align 8
  %159 = load i64*, i64** %17, align 8
  %160 = getelementptr inbounds i64, i64* %159, i64 8
  %161 = load i64, i64* %160, align 8
  %162 = getelementptr inbounds i32, i32* %158, i64 %161
  %163 = load i32, i32* %162, align 4
  %164 = mul nsw i32 %163, 2
  store i32 %164, i32* %162, align 4
  %165 = load %struct.TYPE_7__*, %struct.TYPE_7__** %16, align 8
  %166 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %165, i32 0, i32 0
  %167 = load i32**, i32*** %166, align 8
  %168 = load i32, i32* %11, align 4
  %169 = sext i32 %168 to i64
  %170 = getelementptr inbounds i32*, i32** %167, i64 %169
  %171 = load i32*, i32** %170, align 8
  %172 = load i64*, i64** %17, align 8
  %173 = getelementptr inbounds i64, i64* %172, i64 16
  %174 = load i64, i64* %173, align 8
  %175 = getelementptr inbounds i32, i32* %171, i64 %174
  %176 = load i32, i32* %175, align 4
  %177 = mul nsw i32 %176, 2
  store i32 %177, i32* %175, align 4
  br label %178

178:                                              ; preds = %138, %118, %115, %110
  store i32 0, i32* %8, align 4
  br label %179

179:                                              ; preds = %178, %44
  %180 = load i32, i32* %8, align 4
  ret i32 %180
}

declare dso_local i32 @get_vlc2(i32*, i32, i32, i32) #1

declare dso_local i32 @get_bits1(i32*) #1

declare dso_local i32 @get_bits(i32*, i32) #1

declare dso_local i32 @get_sbits(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
